# EnvGenerator

./: CMakeLists.txt  launch.sh
data/shaders/: initialFrag.glsl  initialVert.glsl
src/: application.cpp  application.hpp  define.hpp  main.cpp
src/entity/: base_entity.hpp  player.cpp  player.hpp
src/render/: camera.cpp  camera.hpp  renderer.cpp  renderer.hpp
src/terrain/: block.cpp  block.hpp  chunk.cpp  chunk.hpp
src/utils/: error.hpp  readfile.hpp
